Fix link flair vertical align

--- a/_flair.scss
+++ b/_flair.scss
@@ -47,7 +47,7 @@
 }
 
 .linkflair .linkflairlabel {
-	max-width: 9999px !important;
+	vertical-align: middle;
 }
 
 .linkflair-spoiler .linkflairlabel ~ a.title, 
